Updated More Elf Labels
Updated more labels for data_btl.elf. Mainly the Parts section

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ node_modules
 
 .vs/ProjectSettings.json
 .vs/slnx.sqlite
+.vs/OrigamiWand/v16/Browse.VC.opendb
+.vs/OrigamiWand/v16/Browse.VC.db-wal
+.vs/OrigamiWand/v16/Browse.VC.db-shm
+.vs/OrigamiWand/v16/Browse.VC.db
