--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.38",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.7.2",
 		"@tsconfig/svelte": "^3.0.0",
 		"@types/cookie": "^0.4.1",
 		"node-sass": "^7.0.1",
@@ -23,7 +23,7 @@
 		"tslib": "^2.4.0",
 		"typesafe-event-emitter": "^1.1.0",
 		"typescript": "^4.7.4",
-		"vite": "^3.0.3"
+		"vite": "^4.0.0"
 	},
 	"type": "module",
 	"dependencies": {
