--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^1.0.0-next.38",
+		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.7.2",
 		"@tsconfig/svelte": "^3.0.0",
 		"@types/cookie": "^0.4.1",
