--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,6 @@
 		"sourceMap": true,
 		"strictNullChecks": false,
 	}
-	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
-	//
-	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
-	// from the referenced tsconfig.json - TypeScript does not merge them in
+	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias and vite.config.js
+	// and are automatically merged in here by svelte kit
 }
