--- a/.github/workflows/build-on-tag.yaml
+++ b/.github/workflows/build-on-tag.yaml
@@ -24,12 +24,12 @@ jobs:
     - name: Build OrigamiWand
       run: PUBLIC_OW_VERSION="${{ steps.get_latest_tag.outputs.TAG_NAME }}" PUBLIC_VERSION_TIMESTAMP=$(date +%s)000 PUBLIC_IS_DEV_VERSION=0 PUBLIC_DEBUG=0 npm run build
     
-    - name: Create zip of build folder
-      run: cd build && zip -r ../out.zip .
+    # - name: Create zip of build folder
+    #   run: cd build && zip -r ../out.zip .
       
     - name: Upload build folder
       uses: actions/upload-artifact@v3.1.3
       with:
         name: OrigamiWand-build
-        path: ./out.zip
+        path: build
         
